Moved to Segger Embedded Studio
Finalised an IDE > Segger Embedded Studio

--- a/Blink PIO/platformio.ini
+++ b/Blink PIO/platformio.ini
@@ -17,3 +17,13 @@ platform = ststm32
 framework = cmsis
 board = disco_f407vg
 upload_protocol = stlink
+debug_tool = stlink
+build_flags = -ggdb
+
+[env:disco_f407vg_dev]
+platform = https://github.com/platformio/platform-ststm32.git
+framework = cmsis
+board = disco_f407vg
+upload_protocol = stlink
+debug_tool = stlink
+build_flags = -ggdb
